[project]
name = "hat-stc"
version = "0.7.3"
description = "Hat statechart engine"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["hat-aio ~=0.7.10"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-stc.git"
Documentation = "http://hat-stc.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.15.18",
    "sphinxcontrib-drawio >=0.0.17",
]

[build-system]
requires = ["hat-doit ~=0.15.18"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
