[project]
name = "hat-stc"
version = "0.7.4"
description = "Hat statechart engine"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["hat-aio ~=0.7.13"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-stc.git"
Documentation = "http://hat-stc.hat-open.com"

[dependency-groups]
run = ["hat-aio ~=0.7.13"]
build = ["hat-doit ~=0.16.4"]
dev = [
    {include-group = "run"},
    {include-group = "build"},
    "sphinxcontrib-drawio >=0.0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.4"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
